--- a/ChronoDrift/imgui.ini
+++ b/ChronoDrift/imgui.ini
@@ -54,10 +54,9 @@ Collapsed=0
 DockId=0x00000007,0
 
 [Window][Scene]
-Pos=252,37
+Pos=490,299
 Size=742,433
 Collapsed=0
-DockId=0x00000002,1
 
 [Window][Game]
 Pos=252,37
@@ -80,7 +79,7 @@ DockSpace       ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,202 Size=1280,713 Split=
   DockNode      ID=0x00000005 Parent=0x8B93E3BD SizeRef=1280,433 Split=X
     DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=994,713 Split=X
       DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=250,713 Selected=0x2E9237F7
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=742,713 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=742,713 CentralNode=1 Selected=0x26816F31
     DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=284,713 Selected=0xE7039252
   DockNode      ID=0x00000007 Parent=0x8B93E3BD SizeRef=1280,278 Selected=0xD44407B5
 
